samples/_failures_safe/1761404848_c07a0d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_144f3642.c:171: error: expected ‘;’, ‘,’ or ‘)’ at end of input
